--- a/custom_components/freebox_custom/manifest.json
+++ b/custom_components/freebox_custom/manifest.json
@@ -7,6 +7,5 @@
   "documentation": "https://www.home-assistant.io/integrations/freebox",
   "iot_class": "local_polling",
   "loggers": ["freebox_api"],
-  "requirements": ["freebox-api==1.2.2"],
-  "zeroconf": ["_fbx-api._tcp.local."]
+  "requirements": ["freebox-api==1.2.2"]
 }
